--- a/anxiety.html
+++ b/anxiety.html
@@ -80,6 +80,7 @@
 
         <button class="option" onclick="navigateTo('test.html')">Take Test</button>
         <button class="option" onclick="navigateTo('journal.html')">Journal</button>
+        <button class="option" onclick="navigateTo('meditation.html')">Meditation</button>
         <button class="option" onclick="navigateTo('contact.html')">Contact Us</button>
     </div>
 
